fix: redirection to error page when id is incorrect, fix: logement collapse

--- a/src/styles/Pages/Logements.scss
+++ b/src/styles/Pages/Logements.scss
@@ -1,7 +1,7 @@
 $kasa-color:#FF6060;
 
 .logement-detail {
-    margin: 2% 5% 3% 5%;
+    margin: 2% 5% 0% 5%;
     display: flex;
     justify-content: space-between;
     @media (max-width: 499px) {
