--- a/src/styles/components/Tags.scss
+++ b/src/styles/components/Tags.scss
@@ -17,5 +17,9 @@ $kasa-color:#FF6060;
         align-items: center;
         width: 200px;
         height: 30px;
+        @media (max-width: 499px) {
+            font-size: 12px;
+        
+        }
     }
 }
